Add Microanalytics script for tracking user interactions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alura - Custom Athletic Tapes</title>
   <meta name="description" content="100% Custom Athletic Tapes. Upload your design. We print it. You perform." />
+  <!-- Microanalytics script (added per request) -->
+  <script data-host="https://app.microanalytics.io" data-dnt="false" src="https://app.microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </head>
 
 <body>
