Replace Microanalytics script with Beam Analytics

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alura - Custom Athletic Tapes</title>
   <meta name="description" content="100% Custom Athletic Tapes. Upload your design. We print it. You perform." />
-  <!-- Microanalytics script (added per request) -->
-  <script data-host="https://app.microanalytics.io" data-dnt="false" src="https://app.microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+  <!-- Microanalytics script  -->
+  <script
+  src="https://beamanalytics.b-cdn.net/beam.min.js"
+  data-token="1bcf79db-5f06-41f9-8809-123f51bd65fd"
+  async
+>
+</script>
 </head>
 
 <body>
